fixed center alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,27 +6,27 @@ body {
 }
 
 .nav-center {
-  width: calc(100% - 2em);
+  width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
   .logo {
     width: 15vmin;
+    margin-left: 0.5em;
   }
   .nav-header {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 1em 1em 1em;
     .nav-toggle {
       background-color: transparent;
       // border: 1px solid #9C6E56;
       border: none;
       border-radius: 50%;
       padding: 1em;
+      margin-right: 1em;
       .fas.fa-bars {
         color: lighten($color: #9c6e56, $amount: 20%);
         font-size: 7vmin;
@@ -45,25 +45,26 @@ body {
       }
     }
   }
-  .links, 
-  .social-icons{
+  .links,
+  .social-icons {
     // display: none;
     width: 100%;
     text-align: center;
   }
   .links {
-   height: 10em;
+    height: 10em;
     display: block;
-    
+
     padding: 0;
     background-color: #9c6e56;
-    a{
-     color: white;
+    a {
+      color: white;
     }
   }
-  .social-icons{
-    i{
-     color: #9c6e56;
+  .social-icons {
+    padding: 0;
+    i {
+      color: #9c6e56;
     }
   }
 }
